# darts-scores

./: .eslintrc.js  .firebaserc  Cargo.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
admin_funcs/: eslint.config.js  package.json  tsconfig.json
admin_funcs/src/: index.ts
src/: App.vue  main.rs  main.ts  player.rs  prelude.rs
src/components/: Game27.vue  Turn27.vue
src/display/: gui.rs  mod.rs  repl.rs  scoredisplay.rs
src/game/: gameimpl.rs  gametype.rs  mod.rs  round.rs  score.rs
src/game/turn/: impls.rs  mod.rs
src/game_old/: mod.rs  round.rs  score.rs  score_1.rs  score_2.rs  turn.rs
src/games/: mod.rs  twentyseven.rs  twentyseven_reference.rs
src/games/old/: .twentyseven.rs.old  twentyseven.rs  twentyseven_2.rs
src/router/: index.ts
src/views/: GameView.vue
v1-web/: package.json  tsconfig.json
v1-web/src/: App.vue  main.ts
v1-web/src/components/: History.vue  PlayerSelection.vue  Summary.vue  SummaryRow.vue
v1-web/src/games/: 27.ts  27v2.ts  27v3.1.ts  27v3.ts  gameTypeV3.ts  (+3 more)
v2-web/: env.d.ts  eslint.config.js  package.json
vue-web/: README.md  package.json
vue-web/src/: main.ts  utils.ts
web/: README.md  env.d.ts  package-lock.json  package.json  prettier.config.mjs  svelte.config.js  tsconfig.app.json
web/src/: App.vue  app.html  clientPreferences.ts  hooks.server.ts  hooks.ts  index.d.ts  initFirebase.ts  main.ts  utils.ts
web_gleam/: README.md  gleam.toml  manifest.toml
web_gleam/src/: darts_web.gleam
(+226 files in other folders)
