[package]
name = "dartscores"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
# drop_bomb = "0.1.5"
eframe = "0.19.0"
egui_extras = "0.19.0"
indexmap = "1.9.1"
num = "0.4.0"
# packed_struct = "0.10.0"
# rustyline = "10.0.0"
# serde = "1.0.145"
# serde_json = "1.0.86"
tabled = "0.10.0"